--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "multicast-dns": "^7.2.0"
   },
   "devDependencies": {
+    "dht-rpc": "^3.0.1",
     "standard": "^12.0.1",
     "tape": "^4.9.1"
   },
   "scripts": {
-    "test": "standard"
+    "test": "standard && tape test.js"
   },
   "repository": {
     "type": "git",
