--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The Hyperswarm discovery stack",
   "main": "index.js",
   "dependencies": {
-    "hyperdht": "^1.3.0",
+    "@hyperswarm/dht": "0.0.1",
     "multicast-dns": "^7.2.0"
   },
   "devDependencies": {
