--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "1.11.3",
   "description": "The Hyperswarm discovery stack",
   "main": "index.js",
+  "types": "index.d.ts",
   "dependencies": {
     "@hyperswarm/dht": "^3.2.0",
     "multicast-dns": "^7.2.0",
     "timeout-refresh": "^1.0.2"
   },
   "devDependencies": {
+    "@types/node": "^13.11.0",
     "dht-rpc": "^4.1.2",
     "standard": "^12.0.1",
     "tape": "^4.9.1"
